Splash screen, memo timer, animations
- added custom video splash screen
- fixed voice memo slider timer issue
- added avatars cross fade, max height in message image, and video message frame

--- a/ui/src/main/res/values/themes.xml
+++ b/ui/src/main/res/values/themes.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <style name="Theme.Zero" parent="android:Theme.Material.Light.NoActionBar">
+        <item name="android:windowBackground">@android:color/black</item>
         <item name="android:statusBarColor">@color/translucent</item>
     </style>
 </resources>
